Change history
--------------

Release Candidate 3
===================

- Fixed MR-180
  "Url Tokenizer Bug at Turkish Culture Info"

- Properly quote file/directory arguments in Pre/Post Build Events to accomodate
  names with spaces.
  Also added some missing files to TestSiteWindsor-vs2005 Project

- Removed DetermineIfPostBack due to side effects when using a custom upload approach
  Also removed PreRequestHandler setting the session as it wasn't really necessary using
  this event for that. Moved to the handler.

- Included abstract Filter class, just as a helper to implement filters 
  with a better interface (instead of IFilter.Process)

- Fixed MR-165 "DataBind doesn't bind NullableDateTime"

- Fixed MR-169
  "Scarfold record modification results exception Can't edit without 
  the proper id when validation is failed in the defined validation rule"

- Fixed MR-168 
  "ValidateEmail attribute does not work properly in Monorail Scarfold"

- Introduced CacheAttribute which can be used on actions to configure 
  the underlying HttpCachePolicy

- Modified WizardActionProvider to use ControllerLifecycleExecutor

- Modified EngineContextModule a MonoRailHttpHandler to use ControllerLifecycleExecutor

- Refactored controller. Extracted process to ControllerLifecycleExecutor

- Changed ExecuteEnum.Always to include 'StartRequest'

- Added Filter step: StartRequest

  This step runs on the ResolveRequestCache, and is suitable 
  for authentication. However, a session will not be available.

- Fixed MR-158
  "IRequest/Controller must expose the Http method"
  
  Added the following properties to the Controller class:
    IsPost/IsGet/IsPut/IsHead

- Fixed problem with view components reported by Ernst Naezer. The problem
  is that the view component were cached, and instances shared during 
  template executions.

- Introduced smtpPort, smtpUsername, smtpPassword configuration to <monorail> node

- Introduced a PageSize property on the IPaginatedPage.

