@@ -81,7 +81,7 @@ namespace Castle.MonoRail.Framework.Helpers
 
 		#endregion
 
-		#region Form
+		#region Form and FormTo
 
 		///<overloads>This method has three overloads.</overloads>
 		/// <summary>
@@ -120,8 +120,8 @@ namespace Castle.MonoRail.Framework.Helpers
 		}
 
 		/// <summary>
-		/// Creates a <b>form</b> tag with specified <paramref name="method"/>, <paramref name="action"/> and
-		/// <paramref name="id"/>.
+		/// Creates a <b>form</b> tag with the specified <paramref name="method"/>, <paramref name="action"/> and
+		/// <paramref name="id"/> attributes.
 		/// <code>
 		/// &lt;form method=&quot;methodArg&quot; action=&quot;actionArg&quot; id=&quot;idArg&quot;&gt;
 		/// </code>
@@ -147,7 +147,7 @@ namespace Castle.MonoRail.Framework.Helpers
 		}
 
 		/// <summary>
-		/// Creates a <b>form</b> tag with specified <paramref name="method"/>, <paramref name="action"/>,
+		/// Creates a <b>form</b> tag with the specified <paramref name="method"/> and <paramref name="action"/> attributes,
 		/// <paramref name="id"/> and <paramref name="onSubmit"/> event handler. 
 		/// <code>
 		/// &lt;form method=&quot;methodArg&quot; action=&quot;actionArg&quot; id=&quot;idArg&quot; onsubmit=&quot;onSubmitArg&quot;&gt;
@@ -189,7 +189,7 @@ namespace Castle.MonoRail.Framework.Helpers
 		}
 
 		/// <summary>
-		/// Creates a <b>form</b> tag the specified <paramref name="action"/>.
+		/// Creates a <b>form</b> tag with the specified <paramref name="action"/> attribute.
 		/// <code>
 		/// &lt;form action=&quot;actionArg&quot;&gt;
 		/// </code>
@@ -201,6 +201,101 @@ namespace Castle.MonoRail.Framework.Helpers
 		public String Form(String action, IDictionary attributes)
 		{
 			return String.Format("<form action=\"{0}\" {1}>", action, GetAttributes(attributes));
+		}
+		
+		/// <summary>
+		/// Creates a <b>form</b> tag targeting a URL in the style of the <see cref="LinkTo(String, String)"/> methods.
+		/// </summary>
+		/// <param name="action">An action on the current controller.</param>
+		/// <returns>HTML string with form opening tag.</returns>
+		public String FormTo(String action)
+		{
+			return FormTo(Controller.Name, action, null);
+		}
+
+		/// <summary>
+		/// Creates a <b>form</b> tag targeting a URL in the style of the <see cref="LinkTo(String, String)"/> methods.
+		/// </summary>
+		/// <param name="controller">A controller name.</param>
+		/// <param name="action">An action on <paramref name="controller"/>.</param>
+		/// <returns>HTML string with form opening tag.</returns>
+		public String FormTo(String controller, String action)
+		{
+			return FormTo(controller, action, null);
+		}
+
+		/// <summary>
+		/// Creates a <b>form</b> tag targeting a URL in the style of the <see cref="LinkTo(String, String)"/> methods.
+		/// </summary>
+		/// <param name="controller">A controller name.</param>
+		/// <param name="action">An action on <paramref name="controller"/>.</param>
+		/// <param name="id">Object to use for the action ID argument.</param>
+		/// <returns>HTML string with form opening tag.</returns>
+		public String FormTo(String controller, String action, object id)
+		{
+			return FormToAttributed(controller, action, id, null);
+		}
+
+		/// <summary>
+		/// Creates a <b>form</b> tag targeting a URL in the style of the <see cref="LinkToAttributed(String, String, String, IDictionary)"/> methods.
+		/// </summary>
+		/// <param name="controller">A controller name.</param>
+		/// <param name="action">An action on <paramref name="controller"/>.</param>
+		/// <param name="attributes">Additional attributes for the <b>form</b> tag.</param>
+		/// <returns>HTML string with form opening tag.</returns>
+		public String FormToAttributed(String controller, String action, IDictionary attributes)
+		{
+			return FormToAttributed(controller, action, null, attributes);
+		}
+
+		/// <summary>
+		/// Creates a <b>form</b> tag targeting a URL in the style of the <see cref="LinkToAttributed(String, String, String, IDictionary)"/> methods.
+		/// </summary>
+		/// <param name="controller">A controller name.</param>
+		/// <param name="action">An action on <paramref name="controller"/>.</param>
+		/// <param name="id">Object to use for the action ID argument.</param>
+		/// <param name="attributes">Additional attributes for the <b>form</b> tag.</param>
+		/// <returns>HTML string with form opening tag.</returns>
+		public String FormToAttributed(String controller, String action, object id, IDictionary attributes)
+		{
+			return FormToAttributed(controller, action, id, null, attributes);
+		}
+
+		/// <summary>
+		/// Creates a <b>form</b> tag targeting a URL in the style of the <see cref="LinkToAttributed(String, String, String, IDictionary)"/> methods.
+		/// </summary>
+		/// <param name="controller">A controller name.</param>
+		/// <param name="action">An action on <paramref name="controller"/>.</param>
+		/// <param name="id">Object to use for the action ID argument.</param>
+		/// <param name="method">Form method (get, post, etc).</param>
+		/// <param name="attributes">Additional attributes for the <b>form</b> tag.</param>
+		/// <returns>HTML string with form opening tag.</returns>
+		public String FormToAttributed(String controller, String action, object id, string method, IDictionary attributes)
+		{
+			String url = Controller.Context.ApplicationPath;
+			String extension = Controller.Context.UrlInfo.Extension;
+			String formAction = String.Format("{0}/{1}/{2}.{3}", url, controller, action, extension);
+
+			if (id != null)
+			{
+				formAction += "?id=" + id;
+			}
+
+			if (method == null)
+			{
+				method = "post";
+			}
+
+			if (attributes == null)
+			{
+				attributes = DictHelper.Create("method=" + method);
+			}
+			else
+			{
+				attributes["method"] = method;
+			}
+
+			return Form(formAction, attributes);
 		}
 
 		/// <summary>
@@ -229,7 +324,7 @@ namespace Castle.MonoRail.Framework.Helpers
 
 		#endregion
 
-		#region Link and LinkTo
+		#region Link and LinkTo and LinkToWithPost
 
 		///<overloads>This method has two overloads.</overloads>
 		/// <summary>
@@ -418,7 +513,164 @@ namespace Castle.MonoRail.Framework.Helpers
 			                     url, controller, action, extension, name, GetAttributes(attributes), id);
 		}
 
-		#endregion
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the current controller that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="action">Action to link to on the current controller.</param>
+		/// <returns>HTML string with anchor that posts to the current controller</returns>
+		public String LinkToWithPost(String name, String action)
+		{
+			return LinkToWithPost(name, action, null);
+		}
+
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the current controller that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="action">Action to link to on the current controller.</param>
+		/// <param name="id">The ID to be passed as a parameter for the action.</param>
+		/// <returns>HTML string with anchor that posts to the current controller</returns>
+		public String LinkToWithPost(String name, String action, object id)
+		{
+			return LinkToWithPost(name, Controller.Name, action, id);
+		}
+
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the current controller that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="action">Action to link to on the current controller.</param>
+		/// <param name="confirm">Guards the form submission with a javascript confirm popup.</param>
+		/// <returns>HTML string with anchor that posts to the current controller</returns>
+		public String LinkToWithPost(String name, String action, String confirm)
+		{
+			return LinkToWithPost(name, Controller.Name, action, confirm);
+		}
+
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the current controller that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="action">Action to link to on the current controller.</param>
+		/// <param name="id">The ID to be passed as a parameter for the action.</param>
+		/// <param name="confirm">Guards the form submission with a javascript confirm popup.</param>
+		/// <returns>HTML string with anchor that posts to the current controller</returns>
+		public String LinkToWithPost(String name, String action, object id, string confirm)
+		{
+			return LinkToWithPost(name, Controller.Name, action, id, confirm);
+		}
+
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the specified <paramref name="controller"/> that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="controller">Controller to link to.</param>
+		/// <param name="action">Action to link to.</param>
+		/// <param name="id">The ID to be passed as a parameter for the action.</param>
+		/// <returns>HTML string with anchor that posts to the specified <paramref name="controller"/></returns>
+		public String LinkToWithPost(String name, String controller, String action, object id)
+		{
+			return LinkToWithPost(name, controller, action, id, null);
+		}
+
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the specified <paramref name="controller"/> that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="controller">Controller to link to.</param>
+		/// <param name="action">Action to link to.</param>
+		/// <param name="confirm">Guards the form submission with a javascript confirm popup.</param>
+		/// <returns>HTML string with anchor that posts to the specified <paramref name="controller"/></returns>
+		public String LinkToWithPost(String name, String controller, String action, String confirm)
+		{
+			return LinkToWithPost(name, controller, action, null, confirm);
+		}
+
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the specified <paramref name="controller"/> that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="controller">Controller to link to.</param>
+		/// <param name="action">Action to link to.</param>
+		/// <param name="id">The ID to be passed as a parameter for the action.</param>
+		/// <param name="confirm">Guards the form submission with a javascript confirm popup.</param>
+		/// <returns>HTML string with anchor that posts to the specified <paramref name="controller"/></returns>
+		public String LinkToWithPost(String name, String controller, String action, object id, String confirm)
+		{
+			return LinkToWithPostAttributed(name, controller, action, id, confirm, null);
+		}
+
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the specified <paramref name="controller"/> that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="controller">Controller to link to.</param>
+		/// <param name="action">Action to link to.</param>
+		/// <param name="confirm">Guards the form submission with a javascript confirm popup.</param>
+		/// <param name="attributes">Additional attributes for the <b>a</b> tag.</param>
+		/// <returns>HTML string with anchor that posts to the specified <paramref name="controller"/></returns>
+		public String LinkToWithPostAttributed(String name, String controller, String action, String confirm, IDictionary attributes)
+		{
+			return LinkToWithPostAttributed(name, controller, action, null, confirm, attributes);
+		}
+
+		/// <summary>
+		/// Creates an anchor (link) to the <paramref name="action"/> on the specified <paramref name="controller"/> that posts
+		/// using a hidden form element.
+		/// </summary>
+		/// <param name="name">Name for the link.</param>
+		/// <param name="controller">Controller to link to.</param>
+		/// <param name="action">Action to link to.</param>
+		/// <param name="id">The ID to be passed as a parameter for the action.</param>
+		/// <param name="confirm">Guards the form submission with a javascript confirm popup.</param>
+		/// <param name="attributes">Additional attributes for the <b>a</b> tag.</param>
+		/// <returns>HTML string with anchor that posts to the specified <paramref name="controller"/></returns>
+		public String LinkToWithPostAttributed(String name, String controller, String action, object id, String confirm, IDictionary attributes)
+		{
+			IDictionary formAttributes
+				= DictHelper.Create("style=display:inline;margin:0;");
+
+			string onclickAttribute = !String.IsNullOrEmpty(confirm)
+				? String.Format("if(confirm('{0}')){{this.parentNode.submit();}};return false;", confirm)
+				: "this.parentNode.submit();return false;";
+
+			if (attributes == null)
+			{
+				attributes = DictHelper.Create("onclick=" + onclickAttribute);
+			}
+			else
+			{
+				attributes["onclick"] = onclickAttribute;
+			}
+
+			StringBuilder stringBuilder = new StringBuilder();
+
+			if (id != null)
+			{
+				stringBuilder.Append(FormToAttributed(controller, action, id, formAttributes));
+				stringBuilder.Append(LinkToAttributed(name, controller, action, id, attributes));
+			}
+			else
+			{
+				stringBuilder.Append(FormToAttributed(controller, action, formAttributes));
+				stringBuilder.Append(LinkToAttributed(name, controller, action, attributes));
+			}
+
+			stringBuilder.Append(EndForm());
+
+			return stringBuilder.ToString();
+		}
+
+		#endregion 
 
 		#region MapToVirtual
 
@@ -1202,15 +1454,19 @@ namespace Castle.MonoRail.Framework.Helpers
 		#region Create options
 
 		/// <summary>
-		/// TODO: Document this!
+		/// Creates an opening <b>optgroup</b> element.
 		/// </summary>
-		/// <param name="label"></param>
-		/// <returns></returns>
+		/// <param name="label">The label attribute.</param>
+		/// <returns>An opening <b>optgroup</b> element.</returns>
 		public String OptionGroup(String label)
 		{
 			return String.Format("<optgroup label=\"{0}\">", label);
 		}
 
+		/// <summary>
+		/// Creates a closing <b>optgroup</b> element.
+		/// </summary>
+		/// <returns>A closing <b>optgroup</b> element.</returns>
 		public String EndOptionGroup()
 		{
 			return String.Format("</optgroup>");
@@ -1720,7 +1976,7 @@ namespace Castle.MonoRail.Framework.Helpers
 		/// to the <paramref name="selectedValue"/>. Or if <paramref name="selectedValue"/> is an
 		/// array <paramref name="value"/> is selected if <see cref="Array.IndexOf(Array, object)"/> can find it
 		/// in <paramref name="selectedValue"/>.</remarks>
-		private bool IsSelected(object value, object selectedValue, bool isMultiple)
+		private static bool IsSelected(object value, object selectedValue, bool isMultiple)
 		{
 			if (!isMultiple)
 			{
@@ -1742,7 +1998,7 @@ namespace Castle.MonoRail.Framework.Helpers
 		/// <remarks>This method is used to get the <see cref="MethodInfo"/> to retrieve
 		/// specified property from the specified type.</remarks>
 		/// <exception cref="ArgumentNullException">Thrown is <paramref name="elem"/> is <c>null</c>.</exception>
-		private MethodInfo GetMethod(object elem, String property)
+		private static MethodInfo GetMethod(object elem, String property)
 		{
 			if (elem == null) throw new ArgumentNullException("elem");
 			if (property == null) return null;
@@ -1954,7 +2210,7 @@ namespace Castle.MonoRail.Framework.Helpers
 		/// BuildList("ol", elements, styleClass, itemClass);
 		/// </code>
 		/// </example>
-		private String BuildList(String tag, ICollection elements, String styleClass, String itemClass)
+		private static String BuildList(String tag, ICollection elements, String styleClass, String itemClass)
 		{
 			StringBuilder sb = new StringBuilder();
 			StringWriter sbWriter = new StringWriter(sb);
